--- a/LocationData.Rmd
+++ b/LocationData.Rmd
@@ -1,12 +1,10 @@
 ---
-title: "Site map - Marker windpark"
+title: "Spatial Data EcoForest"
 output: html_document
 ---
-# Marker 2020 spatial data 
 
 #Work environment 
 ```{r}
-
 library(tidyverse)
 library(dplyr)
 library(raster)
@@ -26,6 +24,7 @@ library(colorBlindness)
 library(colorblindcheck)
 library(ggmap)
 library(maptools)
+library(spatstat)
 
 output <- "C:/Users/apmc/OneDrive - Norwegian University of Life Sciences/5. EcoForest/Location Data/DigitalPoints"
 
@@ -46,8 +45,6 @@ output_today
 setwd(output_today)
 getwd()
 
-dim(tpt2)
-dim(tpt1)
 
 # Turbine locations
 tpt<- read.csv("C:/Users/apmc/OneDrive - Norwegian University of Life Sciences/5. EcoForest/Location Data/Sites_31052023.csv", sep = ";")
@@ -72,71 +69,54 @@ tpt1$Kategori = as.factor(tpt1$Kategori)
 
 ```
 
-# Convert lat long columns to spatial objects 
+# Convert lat long columns to spatial objects, export 
+More info on geo projections in R
+http://companion.soep.de/Working%20with%20SOEP%20Data/Working%20with%20spatial%20data%20in%20R.html
+
 ```{r}
 tpt1 <- tpt %>% rename ("Lat" = "Coordinate.X0Y0..Lat.",  "Lon" = "Coordinate.X0Y0..Lon." )
 tpt2 <- st_as_sf(tpt1,coords=c("Lon", "Lat"),crs = "+proj=latlong +ellps=WGS84 +datum=WGS84 +units=m +no_defs")
 crs(tpt2$geometry)
+str(tpt2) # sf dataframe 
 
 # Check that these can be plotted 
 plot(tpt2[1])
 
-# More info on geo projections in R
-# http://companion.soep.de/Working%20with%20SOEP%20Data/Working%20with%20spatial%20data%20in%20R.html
+# Formal calss SpatialPointsDataFrame
+df <- SpatialPointsDataFrame(coords=tpt1[,c(8, 7)],data=tpt1, proj4string = CRS("+init=epsg:4326")) 
+crs(df) # WGS84
+plot(df)
 
-## Convert to UTM (easier to export)
+# Create UTM columns 
+dfutm <- spTransform(df, CRS("+proj=utm +zone=32")) 
+st_crs(dfutm)
+plot(dfutm)
+
+dfsp <- as(dfutm, "Spatial") 
+class(dfsp)
+
+dfsf <- as(dfutm, "sf") 
+class(dfsf)
 
 
-dfutm <- sp::spTransform(tpt2, CRS("+proj=utm +zone=32 +datum=WGS84"))
+
+getwd()
+# "C:/Users/apmc/OneDrive - Norwegian University of Life Sciences/5. EcoForest/Location Data/DigitalPoints/MainSites_2023-05-31"
+st_write(dfsf,"EcoForestSitePlots.gpkg")
+
+# Export shape file
+writeOGR(dfutm, dsn= "C:/Users/apmc/OneDrive - Norwegian University of Life Sciences/5. EcoForest/Location Data/DigitalPoints/MainSites_2023-05-31",
+     dataset_options="GPX_USE_EXTENSIONS=yes",layer="ESRIS Shapefile",driver="GPX", overwrite_layer = T)
+
+writeOGR(dfutm, dsn= "C:/Users/apmc/OneDrive - Norwegian University of Life Sciences/5. EcoForest/Location Data/DigitalPoints/MainSites_2023-05-31/waypoints.gpx",
+     dataset_options="GPX_USE_EXTENSIONS=yes",layer="waypoints",driver="GPX", overwrite_layer = T) 
+
 
 
 ```
 *Back up option*
-# Code / functions from : 
-# https://stackoverflow.com/questions/18639967/converting-latitude-and-longitude-points-to-utm
-LatLonToUTMEPSGCode <- function(lat, lon) {
-
-  zone_number <- (floor((lon + 180) / 6) %% 60) + 1
-
-  # Special zones for Norway
-  cond_32 <- lat >= 56.0 & lat < 64.0 & lon >= 3.0 & lon < 12.0
-  zone_number[cond_32] <- 32
-
-  # Special zones for Svalbard
-  cond_lat <- lat >= 72.0 & lat < 84.0
-
-  cond_31 <- cond_lat & lon >= 0.0 & lon <  9.0
-  zone_number[cond_31] <- 31
-
-  cond_33 <- cond_lat & lon >= 9.0 & lon < 21.0
-  zone_number[cond_33] <- 33
-
-  cond_35 <- cond_lat & lon >= 21.0 & lon < 33.0
-  zone_number[cond_35] <- 35
-
-  cond_37 <- cond_lat & lon >= 33.0 & lon < 42.0
-  zone_number[cond_37] <- 37
-
-  # EPSG code
-  utm <- zone_number
-  utm[lat > 0] <- utm[lat > 0] + 32600
-  utm[lat <= 0] <- utm[lat <= 0] + 32700
-
-  return(utm)
-}
-
-sf_sample <- sf::st_as_sf(tpt2, coords = c("Lon", "Lat"),
-                          crs = 4326)
-sf_sample$Easting <- "" 
-sf_sample$Northing <- "" 
-
-df_utm <- sf_sample %>%
-  do(cbind(., st_coordinates(.))) %>%
-  mutate(EPSG = LatLonToUTMEPSGCode(lat = Y, lon = X)) %>%
-  group_by(EPSG) %>%
-  do(cbind(as.data.frame(.) %>% dplyr::select(Northing, Easting),
-           st_coordinates(st_transform(., crs = head(.$EPSG, 1))))) 
-%>% ungroup()
+Code / functions from : 
+https://stackoverflow.com/questions/18639967/converting-latitude-and-longitude-points-to-utm
 
 
 # Site Map 
@@ -150,19 +130,14 @@ plot1 <- tpt2 %>% leaflet() %>%
 plot1$x$options = append(plot1$x$options, list("zoomControl" = FALSE,  "scaleBar"=TRUE))
 plot1 
 
-```
+###############################################
 
-# Export .gpx and .kmz files 
-```{r}
-
-# .GPX and KML files of main sites 
-latslongs <- SpatialPointsDataFrame(coords=tpt1[,c(7, 8)],data=tpt1, proj4string =CRS("+proj=latlong +ellps=WGS84")) 
-crs(latslongs) 
-spTransform(latslongs, datum=WGS84 +no_defs +towgs84=0,0,0)
-st_crs(latslongs)
-
-writeOGR(latslongs, dsn= "C:/Users/apmc/OneDrive - Norwegian University of Life Sciences/5. EcoForest/Location Data/DigitalPoints/MainSites_2023-05-31",
-     dataset_options="GPX_USE_EXTENSIONS=yes",layer="waypoints",driver="GPX", overwrite_layer = T)
+plot1 <- df %>% leaflet() %>% 
+   addTiles() %>%
+   addCircleMarkers(radius = 7, color = "gray",
+                       fillOpacity = 0.5,  stroke = TRUE) %>% 
+  addScaleBar(position = "bottomright")
+plot1$x$options = append(plot1$x$options, list("zoomControl" = FALSE,  "scaleBar"=TRUE))
+plot1 
 
 ```
-
